# yfinance-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  skills-lock.json
.claude/: settings.json  statusline-command.sh
docs/adr/: 0001-outsized-insider-transactions-ranking.md  0002-market-vs-company-calendar.md
ralph/: PROMPT_build.md  PROMPT_plan.md  loop.sh  parse_stream.js
src/: __init__.py  models.py  server.py  utils.py
src/tools/: __init__.py  analysis.py  bulk.py  calendars.py  financials.py  historical.py  insiders.py  news.py  options.py  stock_info.py
tests/: conftest.py  test_analysis.py  test_bulk.py  test_calendars.py  test_financials.py  test_historical.py  test_insiders.py  test_news.py  test_options.py  test_server.py  test_stock_info.py  test_utils.py
